--- a/public/style.css
+++ b/public/style.css
@@ -239,6 +239,7 @@ body {
   letter-spacing: 1px;
   color: var(--primary);
   text-shadow: 0 0 5px rgba(0, 240, 255, 0.5);
+
 }
 
 .chat-box {
@@ -552,6 +553,17 @@ body {
     display: flex;
   }
 }
+
+@media (max-width: 480px){
+
+.chat-header {
+  margin-left: 50px;
+
+}
+
+}
+
+
 
 /* ===== EFFETS SPECIAUX ===== */
 /* Lignes de grille holographiques */
