--- a/public/style.css
+++ b/public/style.css
@@ -407,7 +407,7 @@ body {
 
   .chat-box {
     padding: 16px;
-    padding-bottom: 50px;
+    padding-bottom: 150px;
   }
 
   .message {
@@ -417,6 +417,7 @@ body {
 
   .chat-input {
     padding: 12px 16px;
+    margin-bottom: 250px;
   }
 
   #toggle-btn {
