--- a/public/style.css
+++ b/public/style.css
@@ -406,6 +406,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  display: none; /* Cacher par défaut */
 }
 
 #toggle-btn:hover {
@@ -509,3 +510,7 @@ body {
 .chat-box.expand {
   max-height: 1000px; /* Grande valeur qui couvre la plupart des cas */
 }
+
+
+
+
